--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "styles.css">
     <title>Real Estate Agency</title>
 </head>
 <body>
     <div class="container">
-        
+        <header class = "header">
+            <div>
+                <span class = "logo">4</span>
+                <span class = "title">divari</span>
+            </div>
+                <span class = "title" style = "font-size: 1rem;">apartments & privaterooms</span>
+        </header>
+        <navbar class = "nav">
+            <ul>
+                <li class = "list"><a href="/" id = "active">Home</a></li>
+                <li class = "list"><a href="/">Apartments</a></li>
+                <li class = "list"><a href="/">Services</a></li>
+                <li class = "list"><a href="/">Links</a></li>
+                <li class = "list"><a href="/" class = "no-right-border">About</a></li>
+            </ul>
+        </navbar>
     </div>
 </body>
 </html>
