--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             </div>
                 <span class = "title" style = "font-size: 1rem;">apartments & privaterooms</span>
         </header>
+
         <navbar class = "nav">
             <ul>
                 <li class = "list"><a href="/" id = "active">Home</a></li>
@@ -24,6 +25,22 @@
                 <li class = "list"><a href="/" class = "no-right-border">About</a></li>
             </ul>
         </navbar>
+
+        <section id="slider">
+            <img src = "media/building.jpg" alt = "Apartments" class = "img-active">
+            <img src = "media/Apartment.jpg" alt = "Apartments">
+            <img src = "media/House.jpg" alt = "Apartments">
+            <img src = "media/insideHouse.jpg" alt = "Apartments">
+            <button id="prev">&lt</button>
+            <button id="next">&gt</button>
+        </section>
+
+        <section class = "popular-section">
+            <span>Most Popular</span>
+        </section>
     </div>
+
+    <!-- javascript files -->
+    <script src = "script.js" type = "text/javascript"></script>
 </body>
 </html>
