example section created and somebug fixes

--- a/index.html
+++ b/index.html
@@ -34,9 +34,40 @@
             <button id="prev">&lt</button>
             <button id="next">&gt</button>
         </section>
+        <section class = "example">
+            <article class = "popular-section">
+                <span>Most Popular</span>
+            </article>
+                <article class = "example-part">
+                    <div class = "each-example">
+                        <img src="media/example.jpg" alt="insideHouse" class = "example-img">
+                        <span class = "example-explain">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                        <button class = "example-btn">click me</button>
+                    </div>
+                    <div class = "each-example">
+                        <img src="media/example2.jpg" alt="insideHouse" class = "example-img">
+                        <span class = "example-explain">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                        <button class = "example-btn">click me</button>
+                    </div>
+                    <div class = "each-example">
+                        <img src="media/example3.jpg" alt="outsideVilla" class = "example-img">
+                        <span class = "example-explain">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                        <button class = "example-btn">click me</button>
+                    </div>
+                    <div class = "each-example">
+                        <img src="media/example4.jpg" alt="insideVilla" class = "example-img">
+                        <span class = "example-explain">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                        <button class = "example-btn">click me</button>
+                    </div>
+                </article>
+        </section>
+        <section class = "info">
+            <article class="save-info">
 
-        <section class = "popular-section">
-            <span>Most Popular</span>
+            </article>
+            <article class="rent-info">
+
+            </article>
         </section>
     </div>
 
