information section created

--- a/index.html
+++ b/index.html
@@ -63,10 +63,38 @@
         </section>
         <section class = "info">
             <article class="save-info">
-
+                <div class = "info-header">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 header-svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+                      </svg>
+                      <span class = "info-title">save your time and money with US</span>
+                </div>
+                <div class="info-explain">
+                    <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis officiis asperiores laudantium repudiandae rem facere cum debitis minus est rerum, error consectetur culpa, dignissimos eum voluptatum saepe eius, eaque iusto.</span>
+                </div>
+                <div class="info-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 read-more" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z" />
+                      </svg>
+                      <span>red more</span>
+                </div>
             </article>
             <article class="rent-info">
-
+                <div class = "info-header">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 header-svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                      </svg>
+                      <span class="info-title">Apartments for rent in these top cities</span>
+                </div>
+                <div class = "info-explain">
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit numquam sint quisquam labore enim quam dignissimos alias commodi facere! Repudiandae?</span>
+                </div>
+                <div class = "info-button">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 read-more" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M5 4a2 2 0 012-2h6a2 2 0 012 2v14l-5-2.5L5 18V4z" />
+                      </svg>
+                      <span>red more</span>
+                </div>
             </article>
         </section>
     </div>
