--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li class = "list"><a href="/">Apartments</a></li>
                 <li class = "list"><a href="/">Services</a></li>
                 <li class = "list"><a href="/">Links</a></li>
-                <li class = "list"><a href="/" class = "no-right-border">About</a></li>
+                <li class = "list"><a href="/" class = "no-right-border no-bottom-border">About</a></li>
             </ul>
         </navbar>
 
@@ -34,6 +34,7 @@
             <button id="prev">&lt</button>
             <button id="next">&gt</button>
         </section>
+        
         <section class = "example">
             <article class = "popular-section">
                 <span>Most Popular</span>
@@ -97,6 +98,77 @@
                 </div>
             </article>
         </section>
+
+        <section class="test">
+            <span>
+                Our Advantages
+            </span>
+            <span>
+                Useful info for the RealEstate 
+            </span>
+            <span>
+                testimonials
+            </span>
+        </section>
+
+        <section class="about-us">
+            <div class = "advantage">
+                <div class="adv-section">
+                    <span class = "word">
+                        <p>A</p>
+                    </span>
+                    <span class = "adv-explain">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </span>
+                    <span class = "adv-btn">
+                        details
+                    </span>
+                </div>
+
+                <div class="adv-section">
+                    <span class = "word">
+                        <p>B</p>
+                    </span>
+                    <span class = "adv-explain">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </span>
+                    <span class = "adv-btn">
+                        details
+                    </span>
+                </div>
+            </div>
+
+            <div class = "useful-info">
+                <ol class = "useful-list">
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                    <li>Lorem ipsum dolor sit amet.</li>
+                </ol>
+            </div>
+
+            <div class = "testimonials">
+                <img src="media/realEstateMan.jpg" alt="realEstate Man">
+                <span class = "test-explain">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</span>
+                <span class = "adv-btn">
+                    more Testimonials
+                </span>
+            </div>
+        </section>
+
+        <footer class = "footer">
+            <div>
+                <span class = "logo">4</span>
+                <span class = "title">divari</span>
+            </div>
+                <span class = "title" style = "font-size: 1rem;">apartments & privaterooms</span>
+                <h2 class = "programmer">coded By mohammadsaleh haghmohammadloo</h2>
+                <div class = "end"></div>
+        </footer>
     </div>
 
     <!-- javascript files -->
