some responsive bug fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button id="prev">&lt</button>
             <button id="next">&gt</button>
         </section>
-        
+
         <section class = "example">
             <article class = "popular-section">
                 <span>Most Popular</span>
@@ -153,10 +153,10 @@
 
             <div class = "testimonials">
                 <img src="media/realEstateMan.jpg" alt="realEstate Man">
-                <span class = "test-explain">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</span>
-                <span class = "adv-btn">
+                <div class = "test-explain"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span></div>
+                <div class = "adv-btn">
                     more Testimonials
-                </span>
+                </div>
             </div>
         </section>
 
